--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@
     </head>
     <body>
         <h1>O uso excessivo de agrotoxico</h1>
+        <img src="agro" id="agro" Alt="agro"></th>
         
