--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@
     <body>
         <h1>O uso excessivo de agrotoxico</h1>
         <img src="agro" id="agro" Alt="agro"></th>
+    </body>
         
