--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <link rel="stylesheet" herf="CSS.html">
     </head>
     <body>
-        <h1>O uso excessivo de agrotoxico</h1>
+        <h1>O uso excessivo de agrotoxicos</h1>
         <img src="agro" id="agro" Alt="agro"></th>
+        <p>Os fenomenos negativos do uso excessivo de agrotoxicos</p>
+        
     </body>
         
