--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
         <h1>O uso excessivo de agrotoxicos</h1>
         <img src="agro" id="agro" Alt="agro"></th>
         <p>Os fenomenos negativos do uso excessivo de agrotoxicos</p>
-        
+        <ul>
+            <li>o impacto na vida das pessoas</li>
+            <li>os problema no meio ambiente</li>
+            <li>conclusão</li>
+        </ul>
+        <p>O uso excessivo de agrotóxicos tem um impacto significativo na saúde humana, podendo causar desde problemas agudos até doenças crônicas e até mesmo a morte.</p>
     </body>
         
