--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>O uso excessivo de agrotoxico</title>
-        <link rel="stylesheet" herf="CSS.html">
+        <link rel="stylesheet" herf="css.html">
     </head>
     <body>
         <h1>O uso excessivo de agrotoxicos</h1>
